2011-11-22  Ethan A Merritt  <merritt@u.washington.edu>

	* Branchpoint for 4.6
	cvs tag -b branch-4-6-stable

2011-11-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/contour.c (contour): Format contour labels using gprintf rather
	than sprintf so that LC_NUMERIC and "set decimal" are honored.
	Bugfix.

	* term/js/gnuplot_svg.js: Try to correct for coordinate offset due to
	scrollbars.  The fix is unfortunately browser specific.

2011-11-22  Peter <plotter@piments.com>

	* term/svg.trm: "standalone" option includes gnuplot_svg.js mousing
	support directly in the output *.svg file rather than linking to it
	as an external resource.

2011-11-18  Daniel Leidert  <dleidert@users.sourceforge.net>

	* demo/html/webify.pl demo/html/webify_svg.pl demo/html/webify_canvas.pl
	Use perl5 native routine ctime() rather than perl4 external module.

	* src/datafile.c term/epson.trm term/post.trm:
	Typos.

	* configure.in: Check for lua5.1.pc if lua.pc is not found.

	* man/gnuplot.1: Add some needed character escapes.

2011-11-18  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgdiplus.cpp src/win/wgdiplus.h src/win/wgnuplib.h
	src/win/wgraph.c src/win/wresourc.h: Antialiasing of fill patterns.

	* src/win/wgraph.c (CopyPrint): Use Print Setup dialog since the Page
	Setup dialog does not offer a possibility to change printer. Do not
	use antialiasing on printers.

2011-11-15  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgnuplib.h src/win/wgraph.c term/win.trm: Store current
	text encoding in list of drawing ops.

2011-11-15  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.h src/axis.c (parse_range, parse_named_range)
	src/axis.c (save_writeback_all_axes check_axis_reversed)
	src/fit.c src/plot2d.c src/plot3d.c src/stats.c src/unset.c:
	Replace axis-related macros with equivalent subroutines.

2011-11-14  Ethan A Merritt  <merritt@u.washington.edu>

	* config/Makefile.am.in demo/Makefile.am.in m4/Makefile.am.in